--- a/SuperEpicPandaAdventureExtremeII/.classpath
+++ b/SuperEpicPandaAdventureExtremeII/.classpath
@@ -5,9 +5,17 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="SuperEpicPandaAdventureExtremeII/lib/natives/linux"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="/home/john/programming/java/PandaGame/jorbis-0.0.17-1.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/john/programming/java/PandaGame/lwjgl.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/john/programming/java/PandaGame/slick.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="jars/jorbis-0.0.17-1.jar"/>
+	<classpathentry exported="true" kind="lib" path="jars/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="SuperEpicPandaAdventureExtremeII/lib/natives/linux"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="jars/slick.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
