--- a/SuperEpicPandaAdventureExtremeII/.classpath
+++ b/SuperEpicPandaAdventureExtremeII/.classpath
@@ -10,12 +10,16 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="jars/lwjgl.jar">
+	<classpathentry exported="true" kind="lib" path="jars/lwjgl.jar"/>
+	<classpathentry exported="true" kind="lib" path="jars/jorbis-0.0.17-1.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="SuperEpicPandaAdventureExtremeII/lib/natives/linux"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="PandaGame/SuperEpicPandaAdventureExtremeII/lib/natives/windows"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="jars/jorbis-0.0.17-1.jar"/>
-	<classpathentry exported="true" kind="lib" path="jars/slick.jar"/>
+	<classpathentry exported="true" kind="lib" path="jars/slick.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="PandaGame/SuperEpicPandaAdventureExtremeII/lib/natives/windows"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
